# ece-world-paris-ing1-2022-2023-equipe-20-td-1-codename-enjoyers

./: .gitignore  CMakeLists.txt  Jeux_Snake.c  README.md  header.h  icon.rc  jeu_riviere.c  jeuballons.c  main.c
assets/Item/GuitarHero/: Cupid (facile).csv  (+2 more)
presentation/: presentation.md
saves/: hscores.txt
src/Ballons/: Acteurs.c  Ballons.c  Joueur.c  collisions.c  jeuballons.c
src/Course/: jeu_course.c
src/GuitarHero/: actualiser_cercles.c  actualiser_tab_cercles.c  charger_interface.c  charger_musique.c  collision_cercles.c  detection_touches.c  guitar_hero.c  listbox_getter.c  map.c  organiser_portees.c  spawn_cercles.c  update_millis.c
src/Menu/: Acceuil.c  Fin_de_partie.c  Recherche_Event_le_plus_proche.c  activation_event.c  charger_eventboxes.c  charger_hitboxes.c  charger_sprites.c  collision_joueur_hitbox.c  deplacement_joueurs.c
src/Riviere/:  Creation_rondin.c  Afficher_joueur.c  Afficher_rondin.c  Afficher_tab_joueur.c  Afficher_tab_rondin.c  Collision_joueur_rondin.c  Creation_joueur.c  Creation_rondin.c  Deplacement_joueur.c  Deplacement_rondin.c  Deplacement_tab_rondin.c  Fin_partie_riv.c  Remplir_tab_joueur.c  Remplir_tab_rondin.c  Sous_programme_Riviere.c  Verification_collision.c  jeu_riviere.c  traverser_riviere.c
src/Sauvegarde/: Statistiques.c  compter_lignes_fichier.c  consulter.c  menu_callback.c  remplir_tab_sauvegardes.c  sauvegarder.c  tri_insertion.c
src/Snake/: Jeux_Snake.c  Sous_programme_Snake.c  Sous_programme_score.c
src/Taupe/: Fin_partie_taupe.c  jeu_taupe.c  sous_prog_taupe.c  verification.c
